--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.1",
+    "tailwindcss-bg-patterns": "^0.3.0",
     "vite": "^4.2.0"
   }
 }
